--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<title> MY portfolio</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -10,6 +11,18 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+<h1 role="heading"> Heading</h1>
+	<img  src="#" role="img" alt="image" >
+	<nav role="navigation">
+	Include a heading, navigation bar, image, brief description, and a list with at least three items.	
+	</nav>
+	<ul role="list">
+		<li role="listitem"> list item-1</li>
+				<li role="listitem"> list item-2</li>
+				<li role="listitem"> list item-3</li>
+		
+	</ul>
+	
 
 </body>
 
